# Meeting-in-Beiyang

./: .gitignore  CLAUDE.md  README.md  build-apk-clean.ps1  build-windows-clean.ps1  buildozer.spec  docker-build-apk.sh  main.py  pyproject.toml  requirements.txt  run.bat  run_tests.bat
code_share/: __init__.py  code_share_app.py
code_share/core/: __init__.py
code_share/screens/: chat_screen.py  discover_screen.py  friends_screen.py  profile_screen.py  settings_screen.py
code_share/services/: __init__.py  connection_manager.py  friend_db.py  message_service.py  social_runtime.py  social_service.py  udp_service.py
code_share/utils/: __init__.py  helpers.py  protocol.py
core/: code_share_app.py  main.py
core/backend/: __init__.py
core/config/: __init__.py  paths.py
core/frontend/: __init__.py  app.py  app_runtime.py  app_service_facade.py  app_shell.py  image_crop.py  theme.py
core/ops/: __init__.py  bootstrap.py  logging_config.py
core/screens/: __init__.py  chat_screen.py  discover_screen.py  friends_screen.py
core/services/: friend_db.py  message_service.py  social_runtime.py  social_service.py  udp_service.py
core/tests/: test_connection_manager.py  test_file_architecture.py  test_file_transfer_state.py  test_friend_db.py  test_image_crop.py  test_protocol.py  (+6 more)
docs/: latest.json  成员名单.txt  相识北洋.tex
operations/: run_local_pair.ps1  run_random_users.ps1
tests/: test_connection_manager.py  test_friend_db.py  test_package_structure.py  test_protocol.py  test_social_flow.py  test_social_runtime.py  test_social_service.py  test_udp_service.py
(+58 files in other folders)
